# Bookings

./: .gitignore  readme.md
backend/: Cargo.toml
backend/.sqlx/: query-0873ff0237b2500d726e910622e73260008cdded555f603794c8b1292fcaf01c.json  query-24b984d5e99de09c3624d7bebc40a5b7840d2f5d0dd63f0591b1972624c0a53e.json  query-419fe3e4a5594c7ae6ff97a3097d76a5fc487f566dd0d92d604e59dc398ad2d4.json  query-6aa26c5555d799f9b496cad2b8a7b5db18af4e7dbef8fa94e48d5e989b09b04f.json  query-d88cca5ec9c58d078aa916875dae8bd798dd542276226431c7f44563fd001d37.json
backend/migrations/: 20250801145239_init.sql  20250801145240_profiles.sql  20250801145259_users.sql  20250801150221_temp_keys.sql  20250801150550_auth_helper_fns.sql  20250821105651_bookable.sql  20250821105652_bookable_times.sql  20250821105746_bookings.sql  20250821112132_booking_fns.sql  20250821142846_profile_notes.sql
backend/src/: main.rs  routes.rs
backend/src/blueprints/: mod.rs
backend/src/blueprints/bookable_slots/: mod.rs  repo.rs
backend/src/blueprints/bookable_slots/routes/: create_bookable_slot.rs  delete_bookable_slot.rs  get_bookable_slot.rs  get_bookable_slots.rs  mod.rs  update_bookable_slot.rs
backend/src/blueprints/bookables/: mod.rs  repo.rs
backend/src/blueprints/bookables/routes/: create_bookable.rs  (+5 more)
backend/src/blueprints/bookings/: mod.rs  repo.rs
backend/src/blueprints/docs/: get_api_docs.rs  mod.rs
backend/src/blueprints/users/: mod.rs  model.rs  repo.rs
backend/src/middleware/: auth.rs
backend/src/utils/: api_response.rs  generate_random_string.rs  hashing.rs  logger.rs  mod.rs
(+56 files in other folders)
