[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.7.0"
actix-http = "3.5.1"
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
sqlx = {version = "0.8.3", features = ["postgres", "macros", "migrate", "uuid", "chrono", "runtime-tokio"]}
tokio = "1.44.1"
dotenvy = "0.15.7"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
jsonwebtoken = "9.3.0"
chrono = {version = "0.4.39", features = ["serde"]}
pbkdf2 = { version = "0.12", features = ["simple"] }
uuid = {version = "1.11.0", features = ["v4", "serde"]}
rand = "0.8.5"
once_cell = "1.18"
reqwest = { version = "0.12.15", features = ["json"] }
log = "0.4"
env_logger = "0.11"
